feat: new api /me
